// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`do not show logs with --loglevel silent (stderr) 1`] = `""`;

exports[`do not show logs with --loglevel silent (stdout) 1`] = `""`;

exports[`do not show logs with --loglevel silent (write) 1`] = `Array []`;

exports[`do not show warnings with --loglevel error (stderr) 1`] = `
"[error] No matchi...
"
`;

exports[`do not show warnings with --loglevel error (stdout) 1`] = `""`;

exports[`do not show warnings with --loglevel error (write) 1`] = `Array []`;

exports[`show all logs with --loglevel debug (stderr) 1`] = `
"[warn] Ignored un...
[debug] normalize...
[error] No matchi...
"
`;

exports[`show all logs with --loglevel debug (stdout) 1`] = `""`;

exports[`show all logs with --loglevel debug (write) 1`] = `Array []`;

exports[`show errors and warnings with --loglevel warn (stderr) 1`] = `
"[warn] Ignored un...
[error] No matchi...
"
`;

exports[`show errors and warnings with --loglevel warn (stdout) 1`] = `""`;

exports[`show errors and warnings with --loglevel warn (write) 1`] = `Array []`;
